--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,38 @@
-body{
-   background-image: url("../pictures/winding-road3.jpg"); 
-   background-position: center;
-   width: 100%;
-   height: 100vh;
+body {
+  margin: 0px; 
 }
 
-h1 {
-  color: white; 
-  font-size : 70px; 
-  text-align: center;
+header {
+  margin : 0px; 
+  width: 100%;
+  height: 100vh;
+  background-image: url(../pictures/winding-road3.jpg);
+ }
+
+ nav {
+   text-align: center; 
+   padding-top: 20px;
+   width: 100%;
+   position:fixed; 
+ }
+
+nav .logo {
+  height: 150px;
 }
+
+nav ul {
+  list-style-type: none;
+  font-size: 24px;
+}
+
+nav li {
+  display: inline-block; 
+  vertical-align: middle;
+  margin-right: 20px; 
+}
+
+ nav a {
+   text-decoration: none;
+   color : white; 
+ }
+
