--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,14 +1,55 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-
-<div class="home_background">
-
-  <h1> <img src="{{ asset('pictures/logo.png') }}"> </h1>
-
-  <div class="example-wrapper">
-  Salut !
-  </div>
-
-</div>
+{% block container %}
+ <p> Hello 
+ 
+ I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
+  I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
+  I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
+  I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
+  I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
+  I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
+  I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
+ 
+ 
+ 
+ 
+ </p>
 {% endblock %}
+
+
