Responsive background image

--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -45,6 +45,54 @@
  For <br>
  The <br>
  Space <br>
+ I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
+ I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
+ I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
+ I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
+ I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
+ I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
+ I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
+ I would like<br>
+ To <br>
+ Apology <br>
+ For <br>
+ The <br>
+ Space <br>
  
  
  
