--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,8 @@ header {
   width: 100%;
   height: 100vh;
   background-image: url(../pictures/winding-road3.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
  }
 
  nav {
