--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,6 +42,24 @@
             {% endblock %}
 
             {% block container %}{% endblock %}
+
+             {% block footer %}
+                </main>
+            </div>
+            <footer class="mt-auto">
+            <ul class="nav m-0">
+                <li class="nav-item">
+                <a class="nav-link active" href="">À propos</a> 
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="">‎Mentions Légales</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="">Contact</a>
+                </li>
+            </ul>
+            </footer>
+            {% endblock %}
       
         {% endblock %}
 
