--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,103 +1,17 @@
 {% extends 'base.html.twig' %}
 
+
+{% block stylesheets %}
+<!-- Stylesheet GOOGLE FONT -->
+<link rel="stylesheet" href="{{ asset('css/style.css') }}" crossorigin=""/>
+<link rel="stylesheet" href="{{ asset('css/style-advanced-search.css') }}" crossorigin="" />
+{% endblock %}
+
 {% block container %}
- <p> Hello 
- 
- I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
-  I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
-  I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
-  I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
-  I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
-  I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
-  I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
- I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
- I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
- I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
- I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
- I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
- I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
- I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
- I would like<br>
- To <br>
- Apology <br>
- For <br>
- The <br>
- Space <br>
- 
- 
- 
- 
- </p>
+<main>
+<div id="form-advanced-search" class="">
+</div>
+</main>
 {% endblock %}
 
 
