--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,32 +1,32 @@
 body {
-  margin: 0px; 
+  margin: 0px;
   font-family: 'Roboto', sans-serif;
-}
+ }
 
-header {
-  margin : 0px; 
-  width: 100%;
-  height: 100vh;
-  background-image: url(../pictures/winding-road3.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+/*  STYLE HEADER*/
+
+ header {
+   height : 15vh;
+   background-color:#9ab3f5;
  }
 
  nav {
    text-align: center; 
    width: 100%;
+   max-height: 120px;
    position:fixed; 
+  
  }
 
-nav .logo {
-  margin-top: -15px;
+ nav .logo {
   height: 80px;
   vertical-align: top;
 }
 
 nav ul {
   list-style-type: none;
-  font-size: 18px;
+  font-size: 20px;
+
 }
 
 nav li {
@@ -37,5 +37,49 @@ nav li {
 
  nav a {
    text-decoration: none;
-   color : white; 
+   color: white;
+   text-shadow:black 1px 0 10px;
  }
+
+ 
+nav a:hover {
+  text-decoration: none;
+  text-shadow: none; 
+  color: #03383B;
+}
+
+/*  STYLE HEADER*/
+
+ /*  STYLE FOOTER */
+footer {
+  background-color: #a3d8f4;
+  position: absolute;
+  bottom: 0;
+  height : 6%;
+  width: 100%;
+
+}
+
+footer ul {
+  list-style-type: none;
+}
+
+footer .nav {
+  display: flex;
+  justify-content: space-around;
+}
+
+footer a {
+  font-size: 16px;
+  text-decoration: none;
+  color: white;
+  text-shadow:black 1px 0 10px;
+}
+
+footer a:hover {
+  text-decoration: none;
+  color: #03383B;
+}
+
+
+/*  END STYLE FOOTER */
