--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,10 +29,10 @@
                     <nav>
                         <ul>
                             <li><a href = "#"> Recherche simple</a></li>
-                            <li><a href = "#"> Recherche avancée</a></li>
+                            <li><a href = "{{ path('home')}}"> Recherche avancée</a></li>
                             <li><a href = "#">  <img  class="logo" src="{{ asset('pictures/logo.png') }}" alt="logo">
                             <li><a href = "#"> Groupe de voyage</a></li>
-                            <li><a href = "#"> S'inscrire</a></li>
+                            <li><a href = "{{ path('app_register')}}"> S'inscrire</a></li>
                             <li><a href = "#"> Se connecter</a></li>
                         </ul>
                     </nav>
