--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,7 +33,7 @@
                             <li><a href = "#">  <img  class="logo" src="{{ asset('pictures/logo.png') }}" alt="logo">
                             <li><a href = "#"> Groupe de voyage</a></li>
                             <li><a href = "{{ path('app_register')}}"> S'inscrire</a></li>
-                            <li><a href = "#"> Se connecter</a></li>
+                            <li><a href = "{{ path('app_login')}}"> Se connecter</a></li>
                         </ul>
                     </nav>
                 </header>
