--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,9 @@
             <link rel="preconnect" href="https://fonts.gstatic.com">
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 
+            <!-- Stylesheet BOOTSTRAP -->
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
             <!-- Internals stylesheets" -->
             
             <link rel="stylesheet" href="{{ asset('css/style.css') }}" crossorigin=""/>
@@ -30,7 +33,7 @@
                         <ul>
                             <li><a href = "#"> Recherche simple</a></li>
                             <li><a href = "{{ path('home')}}"> Recherche avancée</a></li>
-                            <li><a href = "#">  <img  class="logo" src="{{ asset('pictures/logo.png') }}" alt="logo">
+                            <li><a href = "#">  <img  class="logo" src="{{ asset('pictures/logo/logo.png') }}" alt="logo">
                             <li><a href = "#"> Groupe de voyage</a></li>
                             <li><a href = "{{ path('app_register')}}"> S'inscrire</a></li>
                             <li><a href = "{{ path('app_login')}}"> Se connecter</a></li>
