--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,23 +1,44 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+
+    {{ parent() }}
+
+    <link rel="stylesheet" href="{{ asset('css/style-register.css') }}" crossorigin="" />
+{% endblock %}
+
 {% block container %}
-    {% for flashError in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-    {% endfor %}
+    <body>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+        <div class="card card-signin my-5">
+          <div class="card-body">
+            <h5 class="card-title text-center">S'inscrire</h5>
+            <form class="form-signin">
+              
+                   
+        {{ form_start (registrationForm)  }}
 
-    <h1>Créer votre compte</h1>
-
-    {{ form_start(registrationForm) }}
-
+              <div class="form-label-group">  
         {{ form_row(registrationForm.username) }}
+    
+
         {{ form_row(registrationForm.firstname) }}
         {{ form_row(registrationForm.name) }}
         {{ form_row(registrationForm.birthdate) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.password)  }}
         {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">S'inscrire</button>
-    {{ form_end(registrationForm) }}
+        </div>
+              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
+     
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
 {% endblock %}
 
