--- a/templates/city/view.html.twig
+++ b/templates/city/view.html.twig
@@ -4,7 +4,23 @@
 
     {{ parent() }}
 
-<!-- Stylesheet LEAFLET -->
+    <!-- Stylesheet GOOGLE FONT -->
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Yeseva+One&display=swap"
+    rel="stylesheet">
+
+    <!-- Stylesheet BOOTSTRAP -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <!-- Stylesheet FORK AWESOME -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css"
+    integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
+
+    <!-- Stylesheet EMOJI CSS -->
+    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
+
+
+    <!-- Stylesheet LEAFLET -->
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
@@ -12,62 +28,143 @@
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
     crossorigin="" />
 
-<!-- End Stylesheet LEAFLET -->
+    <!-- End Stylesheet LEAFLET -->
 
-
+    <!-- Internal Stylesheet -->
     <link rel="stylesheet" href="{{ asset('css/style-city-view.css') }}" crossorigin="" />
+
 {% endblock %}
 
 {% block container %}
 
-<p> Fiche de la ville {{ urbanArea.name }} </p>
+    <div class="cityTemplate">
+        <aside class="left-side" id="left-aside">
+
+            <div class="city-likes d-flex justify-content-end" data-cityid="{{ city.id }}">
+                <span class="like city-like" data-like="">
+                    <i class="fa fa-heart-o city" aria-role="presentation"></i>
+                </span>
+            </div>
+
+            <div class="header-city-informations city-title"> 
+                <img src="{{ titleImage.thumb }}" alt="Image de {{urbanArea.name}}" class="img-thumbnail" />
+                <h1 id="h1-city">{{city.cityName}}</h1>
+            </div>
+
+            {% if app.session.get('startDate') is null %}
+                <div class="header-city-informations meteo">
+                <p class="mb-0 date-end">{{"now"|format_datetime('medium', 'none', locale='fr') }}</p> 
+               
+
+                {% for weather in city.weather %}
+                    {% if 02 == weather.month %}
+                        <div class="min-temperature">
+                            <img src="{{ asset('pictures/weather_images/levelTemp_' ~ weather.tempLevelMin) ~ '.png'}}"
+                            class="thermo-img thermo-min" alt="Thermomètre" /> Min {{ weather.averageMin }}°C •
+                        </div>
+                        <div class="max-temperature">
+                            Max {{ weather.averageMax }}°C 
+                            <imgsrc="{{ asset('pictures/weather_images/levelTemp_' ~ weather.tempLevelMax) ~ '.png'}}"
+                            class="thermo-img thermo-max" alt="Thermomètre" />
+                        </div>
+                    {% endif %}
+                {% endfor %}
+
+            {% else %}    
+
+                <div class="header-city-informations meteo">
+                        <p class="mb-0 date-start">{{ app.session.get('startDate')|format_datetime('medium', 'none', locale='fr') }}</p>
+                        {% if app.session.get('startDate') != null %}
+                        <p class="mb-0 date-end">- {{ app.session.get('endDate')|format_datetime('medium', 'none', locale='fr')}}</p>
+                        {% endif %}
+
+                        {# <p class="mb-0 date-start">{{"now"|format_datetime('medium', 'none', locale='fr') }}</p> #}
+                    
+                        {% for weather in city.weather %} 
+                            
+                            {% if 02 == weather.month %}
+                                <div class="min-temperature">
+                                    <img src="{{ asset('pictures/weather_images/levelTemp_' ~ weather.tempLevelMin) ~ '.png'}}"
+                                    class="thermo-img thermo-min" alt="Thermomètre" /> Min {{ weather.averageMin }}°C •
+                                </div>
+                                <div class="max-temperature">
+                                    Max {{ weather.averageMax }}°C <img
+                                    src="{{ asset('pictures/weather_images/levelTemp_' ~ weather.tempLevelMax) ~ '.png'}}"
+                                    class="thermo-img thermo-max" alt="Thermomètre" />
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+            {% endif %}
+
+                 </div>
+
+            <div class="city-basic-datas">
+                {% set categoryScores = {'Transport': 4, 'Loisirs et Culture': 14, 'Sécurité': 7, 'Coût de la vie': 1, 'Environnement': 10, 'Tolérance': 15, 'Accès internet': 13} %}
+                {% for category, score in categoryScores %}
+                    <p class="mb-2">{{ category }}</p>
+                    <div class="progress">
+                        {% if cityScore is not null %}
+                            <div id="progressbar-{{loop.index}}" class="progress-bar" role="progressbar"
+                            style="width: {{ cityScore.categories[score].score_out_of_10 * 10 }}%"
+                            aria-valuenow="{{ cityScore.categories[score].score_out_of_10 * 10 }}" aria-valuemin="0" aria-valuemax="100">
+                            </div>
+                        {% else %}
+
+                            <div id="progressbar-{{loop.index}}" class="progress-bar" role="progressbar"
+                            style="width: {{random(50,100)}}%" 
+                            aria-valuenow="{{random(50,100)}}" aria-valuemin="0" aria-valuemax="100">
+                            </div>
+
+                        {% endif %}
+                    </div>
+                {% endfor %}
+            </div>
+        </aside>     
+            
+        <div id="center-div">
+            <h2 class="text-center">Informations sur la ville</h2>
+
+             <!-- Leaflet Maps-->
+            <div id="leaflet-maps">
+                <div id="mapid" data-longitude="{{ urbanArea.location.latlon.longitude }}"
+                data-latitude="{{ urbanArea.location.latlon.latitude }}"></div>
+            </div> 
+             <!-- End Leaflet Maps-->
+
+            {% if cityScore is not null %}
+                <div class="city-description text-justify" data-summary="{{ cityScore.summary|raw }}">
+                    {{ cityScore.summary|raw }}
+                </div>
+            {% else %}
+                <div class="city-description text-justify">
+                    <br>
+                    Pas d'informations disponibles pour cette ville
+                </div>
+            {% endif %}
+       
+        {# <img src="{{ image.photos[0].image.web }}" alt="Image de {{urbanArea.name}}" </img> </br> #}
+        {# {% for weather in city.weather %} 
+         {{ dump(weather) }}
+         {% endfor %} #}
+         
+        
+
+        {# {% for picture in images.results|slice(0,5) %}
+        <img src="{{ picture.urls.thumb}}" alt="Image de {{urbanArea.name}}" </img>
+        {% endfor %} #}
 
 
- {% for weather in city.weather %} 
 
- {# {{ dump(weather) }} #}
-
-Température minimale : {{ weather.tempLevelMin }}
-
-{% endfor %}
-
-<img src="{{ image.photos[0].image.web }}" alt="Image de {{urbanArea.name}}" </img> </br>
-
-{{ cityScore.categories[4].name }} : {{ cityScore.categories[4].score_out_of_10 }} </br>
-{{ cityScore.categories[14].name }} : {{ cityScore.categories[14].score_out_of_10 }} </br>
-{{ cityScore.categories[7].name }} : {{ cityScore.categories[7].score_out_of_10 }} </br>
-{{ cityScore.categories[1].name }} : {{ cityScore.categories[1].score_out_of_10 }} </br>
-{{ cityScore.categories[10].name }} : {{ cityScore.categories[10].score_out_of_10 }} </br>
-{{ cityScore.categories[15].name }} : {{ cityScore.categories[15].score_out_of_10 }} </br>
-{{ cityScore.categories[13].name }} : {{ cityScore.categories[13].score_out_of_10 }} </br>
+        {# {{ dump(images.results[0].urls)}} #}
 
 
-{{ cityScore.summary }} </br>
+        {# {{ dump(city) }}
+        {{ dump(images) }}
+        {{ dump(image) }} #}
 
-<!-- Leaflet Maps-->
-    <div id="leaflet-maps">
-      <div id="mapid" data-longitude="{{ urbanArea.location.latlon.longitude }}"
-        data-latitude="{{ urbanArea.location.latlon.latitude }}"></div>
-    </div> 
-<!-- End Leaflet Maps-->
-
-{% for picture in images.results|slice(0,5) %}
-<img src="{{ picture.urls.thumb}}" alt="Image de {{urbanArea.name}}" </img>
-{% endfor %}
-
-
-
-{# {{ dump(images.results[0].urls)}} #}
-
-
-{# {{ dump(city) }}
-{{ dump(images) }}
-{{ dump(image) }} #}
-
-{#{{ dump(urbanArea) }} #}
-
-
-
+        {#{{ dump(urbanArea) }} #}
+       
+    </div>
 
 {% endblock %}
 
